--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
 
                 <ul class="header_sort_bar">
                     <li class="header_sort_bar_item">
-                        <a href="" class="header_sort_bar_link">Liên quan</a>
+                        <a href="#" class="header_sort_bar_link">Liên quan</a>
                     </li>
                     <li class="header_sort_bar_item">
-                        <a href="" class="header_sort_bar_link">Mới nhất</a>
+                        <a href="#" class="header_sort_bar_link">Mới nhất</a>
                     </li>
                     <li class="header_sort_bar_item">
-                        <a href="" class="header_sort_bar_link">Bán chạy</a>
+                        <a href="#" class="header_sort_bar_link">Bán chạy</a>
                     </li>
                     <li class="header_sort_bar_item">
-                        <a href="" class="header_sort_bar_link">Giá</a>
+                        <a href="#" class="header_sort_bar_link">Giá</a>
                     </li>
                 </ul>
                 <input type="checkbox" hidden id="checkbox_moblie" class="header_search_checkbox">
@@ -345,7 +345,7 @@
                             <nav class="mobile-catery">
                                 <ul class="mobile-catery_list">
                                     <li class="mobile-catery_item">
-                                        <a href="" class="mobile-catery_link">Dụng cụ & Thiết bị tiện ích</a>
+                                        <a href="" class="mobile-catery_link">Dụng cụ & Thiết bị tiện ích Dụng cụ & Thiết bị tiện ích  </a>
                                     </li>
                                     <li class="mobile-catery_item">
                                         <a href="" class="mobile-catery_link">Dụng cụ & Thiết bị tiện ích</a>
